2005-11-08  Andrew Cagney  <cagney@redhat.com>

	* TestAttachCloningThreads.java: Delete.

2005-11-07  Jeff Johnston  <jjohnstn@redhat.com>

	* SyscallEventInfo.java (ENTRY, EXIT, UNKNOWN): New constants.
	* Task.java (performSyscalled): Add additional syscallType
	parameter.
	* TaskState.java (processPerformSyscalled): Ditto.
	* TestLib.java: Change Wait.Observer classes to add
	additional parameter to syscallEvent member functions.
	* LinuxHost.java: Add additional parameter to Wait.Observer
	syscallEvent member function.
	* TestSyscall2.java: Lower repetition count to 5000 so
	test doesn't fail due to time limitation.

2005-11-07  Andrew Cagney  <cagney@redhat.com>

	* TestTaskAttachedObserver.java: Add
	.ttestAttachDetachExitingTask.
	* TaskState.java: For "detaching", handle
	.processPerformTerminating.
	
	* TestTaskAttachedObserver.java: Refactor .attachDetach, adding
	separate .attach and .detach methods that all take a Task[].  Add
	testAttachDetachManyTasks.

	* TestLib.java: For DaemonChild, add a constructor that starts its
	argument as the program.

	* LinuxProc.java: Delete unused .auxv.

	* TestTaskAttachedObserver.java: Add .attachDetach and
	.testAttachDetachOtherTask.

	* Proc.java: Rename .observableAttachedContinue, and
	.observableDetachedContinue to .observableAttached, and
	.observableDetached.
	* ProcState.java: Update.
	* TestProcStates.java: Update.

2005-11-06  Andrew Cagney  <cagney@redhat.com>

	* Proc.java: Delete .observableAttachedStop.
	* ProcState.java: Delete reference.

	* ProcState.java: Use Proc.getTasks, use Collection.

	* Task.java: Delete .stopEvent.
	* TaskState.java: Update.

	* TaskEvent.java: Delete .Trapped.
	* TestSyscall.java, TestSyscallOpen.java: Delete
	stoppedTaskEventCount.  Do not monitor Task.stopEvent.

	* TaskEvent.java: Delete .Stopped.
	* TaskState.java: Update.

	* TestStep.java: In StepEventObserver, cast obj to a Task.
	* TaskState.java: Pass the Task, not TaskEvent, to
	Task.stepEvent.notify.
	